change color, add num, no cross for different color

--- a/result/A0001_112_sankey_np5.0.html
+++ b/result/A0001_112_sankey_np5.0.html
@@ -8,11 +8,11 @@
     
 </head>
 <body >
-    <div id="44accbb98df0486e913a8766b6cb461f" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="e292453b42f54b0ebcb5ebf58b8fabc0" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_44accbb98df0486e913a8766b6cb461f = echarts.init(
-            document.getElementById('44accbb98df0486e913a8766b6cb461f'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_44accbb98df0486e913a8766b6cb461f = {
+        var chart_e292453b42f54b0ebcb5ebf58b8fabc0 = echarts.init(
+            document.getElementById('e292453b42f54b0ebcb5ebf58b8fabc0'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_e292453b42f54b0ebcb5ebf58b8fabc0 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -41,177 +41,182 @@
             "name": "\u8ca1\u52d9\u6d41\u5411",
             "data": [
                 {
-                    "name": "\u6350\u6b3e\u6536\u5165"
+                    "name": "\u6536\u5165",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "fontWeight": "bold",
+                        "formatter": "{b}  35,954.0",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u88dc\u52a9\u6536\u5165"
+                    "name": "\u6350\u6b3e\u6536\u5165",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "fontWeight": "bold",
+                        "formatter": "{b}  35,059.0",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u5229\u606f\u6536\u5165"
+                    "name": "\u6350\u52a9\u652f\u51fa",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "fontWeight": "bold",
+                        "formatter": "{b}  27,454.0",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u5176\u4ed6\u6536\u5165"
+                    "name": "\u672c\u671f\u9918\u7d40",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "fontWeight": "bold",
+                        "formatter": "{b}  3,392.0",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u6703\u54e1\u5e74\u8cbb\u6536\u5165"
+                    "name": "\u696d\u52d9\u8cbb",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "fontWeight": "bold",
+                        "formatter": "{b}  1,936.0",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u5165\u6703\u8cbb\u6536\u5165"
+                    "name": "\u4eba\u4e8b\u8cbb",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "formatter": "{b}",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u672c\u671f\u77ed\u7d40"
+                    "name": "\u63d0\u64a5\u57fa\u91d1",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "formatter": "{b}",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u6536\u5165"
+                    "name": "\u5229\u606f\u6536\u5165",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "formatter": "{b}",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u696d\u52d9\u8cbb"
+                    "name": "\u8fa6\u516c\u8cbb",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "formatter": "{b}",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u4eba\u4e8b\u8cbb"
+                    "name": "\u5176\u4ed6\u6536\u5165",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "formatter": "{b}",
+                        "valueAnimation": false
+                    }
                 },
                 {
-                    "name": "\u63a8\u5ee3\u8cbb"
-                },
-                {
-                    "name": "\u8fa6\u516c\u8cbb"
-                },
-                {
-                    "name": "\u5176\u4ed6\u8cbb\u7528"
-                },
-                {
-                    "name": "\u7d55\u80b2-\u8a8d\u6350\u5c08\u6848"
-                },
-                {
-                    "name": "\u7d55\u80b2\u88dc\u52a9\u5c08\u6848"
-                },
-                {
-                    "name": "\u7d55\u80b2-\u4e0b\u9109\u5c08\u6848\u8cbb"
-                },
-                {
-                    "name": "\u7d55\u80b2-\u4e2d\u82d7\u7d55\u80b2\u8a08\u756b"
-                },
-                {
-                    "name": "\u6025\u96e3\u6551\u52a9\u8cbb"
-                },
-                {
-                    "name": "\u7d55\u80b2-\u99d0\u7d2e\u8a08\u756b"
-                },
-                {
-                    "name": "\u611b\u5fc3\u4eba\u58eb\u652f\u63f4\u8a08\u756b"
-                },
-                {
-                    "name": "\u6559\u80b2\u5ba3\u5c0e"
-                },
-                {
-                    "name": "\u5883\u5167\u9001\u990a\u8cbb"
+                    "name": "\u6298\u820a",
+                    "label": {
+                        "show": true,
+                        "position": "right",
+                        "margin": 8,
+                        "fontSize": 10,
+                        "formatter": "{b}",
+                        "valueAnimation": false
+                    }
                 }
             ],
             "links": [
                 {
                     "source": "\u6350\u6b3e\u6536\u5165",
                     "target": "\u6536\u5165",
-                    "value": 9697.7
-                },
-                {
-                    "source": "\u88dc\u52a9\u6536\u5165",
-                    "target": "\u6536\u5165",
-                    "value": 621.9
+                    "value": 35059.00000000001
                 },
                 {
                     "source": "\u5229\u606f\u6536\u5165",
                     "target": "\u6536\u5165",
-                    "value": 58.3
+                    "value": 825.0000000000001
                 },
                 {
                     "source": "\u5176\u4ed6\u6536\u5165",
                     "target": "\u6536\u5165",
-                    "value": 3.9
+                    "value": 70.00000000000001
                 },
                 {
-                    "source": "\u6703\u54e1\u5e74\u8cbb\u6536\u5165",
-                    "target": "\u6536\u5165",
-                    "value": 3.1
-                },
-                {
-                    "source": "\u5165\u6703\u8cbb\u6536\u5165",
-                    "target": "\u6536\u5165",
-                    "value": 0.1
-                },
-                {
-                    "source": "\u672c\u671f\u77ed\u7d40",
-                    "target": "\u6536\u5165",
-                    "value": 825.7
+                    "source": "\u6536\u5165",
+                    "target": "\u6350\u52a9\u652f\u51fa",
+                    "value": 27454.0
                 },
                 {
                     "source": "\u6536\u5165",
                     "target": "\u696d\u52d9\u8cbb",
-                    "value": 7610.1
+                    "value": 1936.0
                 },
                 {
                     "source": "\u6536\u5165",
                     "target": "\u4eba\u4e8b\u8cbb",
-                    "value": 2157.0
+                    "value": 1339.0000000000002
                 },
                 {
                     "source": "\u6536\u5165",
-                    "target": "\u63a8\u5ee3\u8cbb",
-                    "value": 933.6
+                    "target": "\u63d0\u64a5\u57fa\u91d1",
+                    "value": 1238.0000000000002
                 },
                 {
                     "source": "\u6536\u5165",
                     "target": "\u8fa6\u516c\u8cbb",
-                    "value": 266.6
+                    "value": 591.0000000000001
                 },
                 {
                     "source": "\u6536\u5165",
-                    "target": "\u5176\u4ed6\u8cbb\u7528",
-                    "value": 243.4
+                    "target": "\u6298\u820a",
+                    "value": 4.0
                 },
                 {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u7d55\u80b2-\u8a8d\u6350\u5c08\u6848",
-                    "value": 6516.0
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u7d55\u80b2\u88dc\u52a9\u5c08\u6848",
-                    "value": 564.1
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u7d55\u80b2-\u4e0b\u9109\u5c08\u6848\u8cbb",
-                    "value": 332.7
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u7d55\u80b2-\u4e2d\u82d7\u7d55\u80b2\u8a08\u756b",
-                    "value": 90.4
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u6025\u96e3\u6551\u52a9\u8cbb",
-                    "value": 52.6
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u7d55\u80b2-\u99d0\u7d2e\u8a08\u756b",
-                    "value": 20.0
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u611b\u5fc3\u4eba\u58eb\u652f\u63f4\u8a08\u756b",
-                    "value": 13.6
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u6559\u80b2\u5ba3\u5c0e",
-                    "value": 10.5
-                },
-                {
-                    "source": "\u696d\u52d9\u8cbb",
-                    "target": "\u5883\u5167\u9001\u990a\u8cbb",
-                    "value": 10.2
+                    "source": "\u6536\u5165",
+                    "target": "\u672c\u671f\u9918\u7d40",
+                    "value": 3392.0
                 }
             ],
             "left": "5%",
@@ -220,32 +225,32 @@
             "bottom": "5%",
             "nodeWidth": 20,
             "nodeGap": 8,
-            "nodeAlign": "justify",
+            "nodeAlign": "left",
             "orient": "horizontal",
             "draggable": true,
             "levels": [
                 {
                     "depth": 0,
                     "itemStyle": {
-                        "color": "#5470C6"
+                        "color": "#ABD9E9"
                     }
                 },
                 {
                     "depth": 1,
                     "itemStyle": {
-                        "color": "#91CC75"
+                        "color": "#2C7BB6"
                     }
                 },
                 {
                     "depth": 2,
                     "itemStyle": {
-                        "color": "#FAC858"
+                        "color": "#FEE090"
                     }
                 },
                 {
                     "depth": 3,
                     "itemStyle": {
-                        "color": "#EE6666"
+                        "color": "#D7191C"
                     }
                 },
                 {
@@ -257,10 +262,7 @@
             ],
             "label": {
                 "show": true,
-                "position": "right",
                 "margin": 8,
-                "fontSize": 10,
-                "formatter": "{b}",
                 "valueAnimation": false
             },
             "lineStyle": {
@@ -269,7 +271,7 @@
                 "opacity": 0.3,
                 "curveness": 0.5,
                 "type": "solid",
-                "color": "source"
+                "color": "gradient"
             },
             "rippleEffect": {
                 "show": true,
@@ -278,13 +280,8 @@
                 "period": 4
             },
             "edge_label": {
-                "show": true,
-                "position": "middle",
-                "color": "#000",
+                "show": false,
                 "margin": 8,
-                "fontSize": 9,
-                "fontWeight": "bold",
-                "formatter": "{c}",
                 "valueAnimation": false
             }
         }
@@ -353,7 +350,7 @@
         }
     ]
 };
-        chart_44accbb98df0486e913a8766b6cb461f.setOption(option_44accbb98df0486e913a8766b6cb461f);
+        chart_e292453b42f54b0ebcb5ebf58b8fabc0.setOption(option_e292453b42f54b0ebcb5ebf58b8fabc0);
     </script>
 </body>
 </html>
